# LoggApproDesktopTauriFull

./: .cursorrules  .env.example  .gitignore  .npmrc  ACCES_WEB.md  ARCHITECTURE_PAYDUNYA_TIME_GUARD.md  AUDIT_CONTROLLERS_RUST.md  MIGRATION_BACKEND_RUST.md  index.html  package-lock.json  package.json  pub.html  server-silent.js  server.js  tsconfig.app.json  vite.config.ts  webpack.config.js
assets/: uml.txt
docs/: ARCHITECTURE_CLE_DBLAADMIN.md  SECURITY_KEYS.md
public/: ActeDto.tsx  AssistantDto.tsx  AssuranceDto.tsx  CabinetDto.tsx  ComptableDto.tsx  DocteurDto.tsx  FactureDto.tsx  NomActeDto.tsx  NomAssuranceDto.tsx  PatientDto.tsx  SecretaireDto.tsx  Users.tsx  codeCouleur.txt  index.html  manifest.json  service-worker.js
scripts/: clean-dist.js  make-square-icon.js  sync-opening-logo.js
src/: .eslintignore  App.tsx  GUIDE_INTEGRATION_TRACES.md  PAGE_ETAT_TEST_CONCEPT.md  STATE_PAGE_EXTENSIBLE_SHEET.md  STATE_PAGE_PAGINATION.md  build-silent-exe.js  config-overrides.js  custom.d.ts  index.css  main.tsx  react-app-env.d.ts  serviceWorkerRegistration.js  tauri-bridge.ts  tsconfig.json.txt
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin_schema.rs  commands.rs  cript_key.rs  crypto.rs  db.rs  db_sqlx.rs  http_server.rs  last_payment_file.rs  main.rs  pay_anchor.rs  paydunya_time_guard.rs  payload.rs  stock_commands.rs
src-tauri/windows/: hooks.nsh
src-tauri/windows/fragments/: firewall.wxs
src/Actions/: actions.ts
src/assets/: codeCouleur.txt  dbfeature.sql  (+2 more)
(+265 files in other folders)
