[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "postgres", "any", "chrono", "json"] }
aes = "0.8"
cbc = "0.1"
base64 = "0.21"
percent-encoding = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
regex = "1"
axum = { version = "0.7", features = ["json", "form"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
local-ip-address = "0.6"
bcrypt = "0.16"
csv = "1.3"
urlencoding = "2"
